# webkube-monitor-log

./: .env.example  README.md  docker-compose.yml
backend/: .env.example  Cargo.toml  Dockerfile  go.mod  go.sum
backend/cmd/server/: main.go
backend/internal/server/: context_handlers.go  grpc.go  handlers.go  health.go  helpers.go  kube.go  logs.go  middleware.go  request_chain.go  response.go  server.go  service_map.go  state.go  workloads.go
backend/proto/monitor/v1/: monitor.pb.go  monitor.proto  monitor_grpc.pb.go
backend/src/: auth.rs  constants.rs  handlers.rs  main.rs  models.rs  routes.rs  services.rs  state.rs
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/auth/[...nextauth]/: route.ts
frontend/src/components/: app-topbar.tsx  context-selector.tsx  env-tab.tsx  global-search.tsx  health-tab.tsx  inspector-panel.tsx  logs-tab.tsx  request-chain.tsx  service-map-view.tsx  session-provider.tsx  spec-tab.tsx  theme-toggle.tsx  timeline-tab.tsx  workload-details.tsx  workload-explorer.tsx
frontend/src/constants/: monitor.ts
frontend/src/hooks/: use-monitor-data.ts  use-service-map.ts  use-theme.ts
frontend/src/types/: monitor.ts  next-auth.d.ts
frontend/src/utils/: monitor.ts
scripts/: benchmark-logs.sh
